crates/toml_edit/tests/fixtures/fuzzed/clusterfuzz-testcase-minimized-parse_document-4572279862591488.stderr
TOML parse error at line 2, column 2
  |
2 | [IIIIIIIIIIIIIIIIIYY.EEEEEEEEEEEEEEIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttGtKp.ttttGttKtu.tttpppp2ttKtKt.ttGttKt.xttKt.t.tp.ttutGtt.tttKt2tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tp.ttttGttKtu.tttpppp2ttKtu.tttpptKt.t.tz.ttttGttKtu.tttpppp2ttKtu.tttpppp-p.tttttKt.tttKt.ttGtKt.tttKt.tp.t.tttKt.tttKt.ttG84444tKp.ttttGttKtu.tttpppp2ttKtu.tt.tp.ttGtKp.ttttGttKtu.tttpppp2ttKtKt.ttGttKt.xttKt.t.tp.ttutGtt.tttKt2tttKt.ttGtKtKtu.tttpppp2ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tttKt.tttKt.ttGtKt.tttKt.tp.t.tttK2p.tttKtKt.ttGtKt.pp2p.tttKt.ttGtKt.tttKt.tp.t.tttKt.tttKt.tt.ttGtKt.tttKt.tp.t.tttKt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttGtKp.ttttGttt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tp.ttttGttKtu.tttpppp2ttKtu.ttttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGtKt.pp2p.tttKtKt.ttGtKt.pp2p.tttKt.ttGtKt.tttKt.t.ttttGttKtu.tttpppp2ttKtu.tt.tp.ttGtKp.ttttGttKtu.tttpppp2ttKtKt.ttGttKt.xttKt.t.tp.ttutGtt.tttKt2tttKt.ttGtKtKtu.tttpppp2ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tttKt.tttKt.ttGtKt.tttKt.tp.t.tttK2p.tttKtKt.ttGtKt.pp2p.tttKt.ttGtKt.tttKt.tp.t.tttKt.tttKt.tt.ttGtKt.tttKt.tp.t.tttKt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttGtKp.ttttGttt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tp.ttttGttKtu.tttpppp2ttKtu.ttttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.t.ttutGtt.tttKt2tttKt.ttGtKtKtu.tttpppp2ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.tttKt.tttKt.ttGtKt.tttKt.tp.t.tttK2p.tttKtKt.ttGtKt.pp2p.tttKt.ttGtKt.tttKt.tp.t.tttKt.tttKt.tt.ttGtKt.tttKt.tp.t.tttKt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttGtKp.ttttGttt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.ttttGttKtu.tttpppp2ttKtu.tttpqpp2p.tttttKt.tttKt.ttGttKt.tttKt.tp.ttttGttKtu.tttpppp2ttKtu.ttttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttutGtt.tttKt2tttKt.tt.tKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKttKtKtu.tttpppp2ttttGttKtu.ttGtKp.ttttGttKtu.tttpppp2ttttpppHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHp2p.tttttKt.tttKt.ttGtKt.pp2p.tttKtKt.ttGtKt.pp2p.tttKt.ttGtKt.tttKt.tp.t.tttKt.tttKt.t77777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777t.ttGtKt.tttKt.tp.t.tttKt.tttKt.ttGtKp.ttttGttKtu.tttpppp2ttKtu.tttpppp2p.tttttKt.tttKt.ttGttKt.tttKt.t.tp.ttGtKp.ttttGttKtu.tttpppp2ttKtKt.ttGttIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII0]
  |  ^
Invalid table header
Recursion limit exceded
